# agent-forge

./: .dockerignore  .gitignore  .gitleaks.toml  .prettierignore  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.sidecar  Dockerfile.web  README.md  config.example.yaml  custom_agents.example.yaml  custom_agents.local.yaml.example  custom_agents.yaml  deploy.example.env  deploy.local.example.env  docker-compose.remote.yml  docker-compose.yml  framework-config.example.yaml  pyproject.toml  skills.yaml  tool_routing.yaml  user_context.example.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  secret-scan.yml
agentforge/: __init__.py  agent.py  attachments.py  builtin_tools.py  cli.py  client.py  config.py  context.py  db_cli.py  discovery.py  intent_classifier.py  mode_prefixes.py  modes.py  modes_config.yaml  parallel.py  pipeline.py  router.py  secret_redactor.py  typing_utils.py  ui.py
agentforge/backends/: __init__.py  _retry.py  base.py  bedrock.py  ollama.py  openai_compat.py
agentforge/coding/: __init__.py  burst.py  codemod_tool.py  driver.py  patch.py  planner.py  retry.py  rollback.py  template.py
agentforge/connectors/: __init__.py  _account.py  _config.py  _google.py  base.py  encryption.py  manager.py
agentforge/prompts/: agent.md  agent_condensed.md  command_guard.md  logs.md  monitor.md  profile_router.md  research_agent.md  research_aggregator.md  research_planner.md  routing.md  scheduler.md  web_search.md
agentforge/steps/: __init__.py  agent_step.py  base.py  llm.py  refiner.py  tool_detector.py  tool_executor.py  vision.py
agentforge/tools/: __init__.py  _file_snapshots.py  archive_tools.py  audio_tools.py  cli_sudo_provider.py  cli_tools.py  cloud_tools.py  code_edit.py  code_quality_tools.py  coding_tools.py  command_guard.py  command_permission_profiles.py  command_policy.py  command_policy_store.py  data_tools.py  docker.py  filesystem.py  git_tools.py  gitlab_tools.py  icon_generator.py  log_analysis.py  media_tools.py  netdiag_tools.py  network_tools.py  notify.py  qdrant_tools.py  readonly_guard.py  redis_tools.py  registry.py  reminders_tools.py  routing.py  shell.py  ssh_tools.py  sudo_cache.py  system.py  testing_tools.py  tmdb.py  web_render.py  web_search.py
app/: config.py  main.py  security.py
app/models/: knowledge.py
app/routes/: health.py  indexer.py  knowledge.py  search.py
app/services/: code_context_service.py  db_service.py  dedup_service.py  embedding_service.py  indexer_service.py  knowledge_file_service.py  knowledge_registry.py  knowledge_service.py  knowledge_vector_service.py  memory_service.py  query_refiner.py  rerank_service.py  response_refiner.py  vector_service.py
chunking/: README.md  __init__.py  config.py  models.py
chunking/cli_docs/: __init__.py  cli.py  extractor.py  mapper.py  parser.py  types.py  writer.py
chunking/code/: __init__.py  cli.py  extractor.py  mapper.py  parser.py  types.py  writer.py
chunking/db/: cli.py  schema_extractor.py
chunking/document/: __init__.py  __main__.py  cli.py  mapper.py  parser.py  types.py  writer.py
chunking/openapi/: cli.py  mapper.py  parser.py  types.py  writer.py
chunking/sql/: __init__.py  cli.py  mapper.py  parser.py  types.py  writer.py
docs/: README.md  SECURITY.md  api-examples.md  api.md  architecture.md  connectors.md  gcp-oauth-gmail.md  local-domains.md  model-catalog.md  modes.md  plugin-authoring.md  tools.md
markdown/: README.md
markdown/custom-agents/: api_test.md  code_reviewer.md  debug.md  docker_ops.md  felix.md  notes.md  perf_analysis.md  security_audit.md  test_mode.md
markdown/skills/: api-design-standards.md  code-review-guidelines.md  docker-best-practices.md  duckdb-analytics.md  git-workflow.md  infrastructure-health.md  log-analysis-patterns.md  observability-monitoring.md  openapi-spec-writing.md  performance-profiling.md  python-best-practices.md  security-audit-guidelines.md  sql-optimization.md  testing-strategy.md  web-scraping-patterns.md
plugins/: __init__.py
profiles/providers/: bedrock.example.yaml  deepinfra.example.yaml  ollama.example.yaml  openrouter.example.yaml
sandbox/: README.md  __init__.py  config.example.yaml  config.py
sandbox/scripts/: probe_tool_lanes.py  sandbox_conf.py
scripts/: clean.sh  deploy-local.sh  deploy-remote.sh  list-legacy-connections.py  setup-local-worker.sh  teardown-local.sh  teardown-remote.sh
scripts/lib/: resolve-deploy.sh
sidecar/: __init__.py  app.py  entrypoint.sh
tests/: test_attachment_injection.py  test_botty_engine.py  test_broker_secret_provider.py  test_cli_sudo_provider.py  test_command_permission_profiles.py  test_command_policy.py  test_command_policy_integration.py  test_command_policy_store.py  test_config_loader.py  test_connector_account.py  test_feature_flags.py  test_knowledge_batch_job.py  test_knowledge_file_service.py  test_knowledge_models.py  test_knowledge_registry.py  test_knowledge_routes.py  test_knowledge_service.py  test_knowledge_vector_service.py  test_load_yaml_policy.py  test_migrations.py  test_mode_prefixes.py  test_mode_routing.py  test_notes_agent_tools.py  test_permissions_api.py  test_prompt_refiner.py  test_readonly_guard.py  test_registry_sudo_confirm.py  test_reminders_tools.py  test_secret_broker.py  test_secret_redactor.py  test_session_source.py  test_shell_sudo.py  test_sudo_cache.py  test_worker_secret_provider.py
web/: __init__.py  entrypoint.sh
worker/: com.agentforge.worker-local-tools.plist.template
(+106 files in other folders)
